<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/AppTheme.TextAppearance.Large"
        android:layout_marginBottom="20dp"
        android:textStyle="bold"
        android:text="@string/add_city_dialog_title"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/AppTheme.TextAppearance.Medium"
        android:layout_marginBottom="20dp"
        android:text="@string/add_city_dialog_message"/>

    <EditText
        android:id="@+id/dialog_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_city_hint"
        android:layout_marginBottom="20dp"/>

</LinearLayout>